--- a/notebooks/nyc_map_visualizations.ipynb
+++ b/notebooks/nyc_map_visualizations.ipynb
@@ -5,12 +5,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "module_path = os.path.abspath(os.getcwd() + '\\\\..')\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)\n",
+    "\n",
+    "os.chdir(os.path.dirname(os.getcwd()))\n",
+    "\n",
+    "from src.visualization.shapes_mapping import *\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_function()\n",
+    "plottingNYC()\n"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "6a26616b14e036b82bb83071402087b0e4fcfadb893de6408fb094352c6c05ea"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 ('base')",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
