figured out how to do things

--- a/notebooks/nyc_map_visualizations.ipynb
+++ b/notebooks/nyc_map_visualizations.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import os\n",
     "import sys\n",
+    "\n",
     "module_path = os.path.abspath(os.getcwd() + '\\\\..')\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
@@ -23,9 +24,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_function()\n",
-    "plottingNYC()\n"
+    "#Plotting NYC zones\n",
+    "\n",
+    "plottingNYC(os.path.abspath(r'data\\processed\\taxi_zones\\taxi_zones.shp'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
