added some comments for team members

--- a/notebooks/nyc_map_visualizations.ipynb
+++ b/notebooks/nyc_map_visualizations.ipynb
@@ -11,15 +11,27 @@
     "import os\n",
     "import sys\n",
     "\n",
+    "#Add modules to sys.path\n",
     "module_path = os.path.abspath(os.getcwd() + '\\\\..')\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
     "\n",
+    "#Go up one directory\n",
     "os.chdir(os.path.dirname(os.getcwd()))\n",
     "\n",
     "mycwd = os.getcwd()\n",
     "\n",
-    "from src.visualization.shapes_mapping import *\n"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Imports\n",
+    "from src.visualization.shapes_mapping import *"
    ]
   },
   {
