--- a/notebooks/nyc_map_visualizations.ipynb
+++ b/notebooks/nyc_map_visualizations.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "#Imports\n",
-    "from src.visualization.shapes_mapping import *"
+    "from src.visualization.shapes_mapping import plotting_map"
    ]
   },
   {
